# amazon_warehouse_robot

./: .gitignore  README.md  arm_gripper_test.py  avoidance_node.py  chassis_control.py  color_check.py  config.py  detection.launch.py  main.py  marker_diagnostic.py  marker_test.py  obstacle.py  people_avoidance.py  vision.py
install/: local_setup.sh  setup.sh
install/robomaster_description/share/robomaster_description/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robomaster_msgs/share/robomaster_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robomaster_msgs/share/robomaster_msgs/action/: MoveArm.idl  MoveServo.idl  PlaySound.idl
install/robomaster_ros/lib/robomaster_ros/: connect  discover  display_battery  h264_decoder  play_audio  play_opus  robomaster_driver
install/robomaster_ros/share/robomaster_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
robomaster_detection/: README.md  package.xml  setup.cfg  setup.py
robomaster_detection/robomaster_detection/: __init__.py
src/robomaster_detection/: avoidance_node.py
src/robomaster_detection/launch/: detection.launch.py
src/robomaster_detection/robomaster_detection/: avoidance_node.py  detection_node.py
src/robomaster_node/: GP-D3.pptx  arm_control.py  arm_gripper_test.py  chassis_control.py  config.py  config.yaml  main.py  obstacle.py  people_avoidance.py  vision.py
src/robomaster_ros/scripts/: chassis_control.py  config.py  main.py  people_avoidance.py  vision.py
tasks/: todo.md
(+392 files in other folders)
