<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robomaster_detection</name>
  <version>0.1.0</version>
  <description>
    ROS 2 package that processes person and marker
    detections from the RoboMaster robot using the robomaster_ros driver.
  </description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robomaster_msgs</exec_depend>
  <exec_depend>robomaster_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>